--- a/public/host.html
+++ b/public/host.html
@@ -14,6 +14,10 @@
     <script src="https://unpkg.com/p5.touchgui@0.5.2/lib/p5.touchgui.js"></script>
     <!-- p5.play -->
     <script src="lib/p5.play.js"></script>
+    <!-- objects -->
+    <script src="lib/player.js"></script>
+    <script src="lib/game.js"></script>
+    <script src="lib/ripple.js"></script>
     <!-- p5.multiplayer-->
     <script src="lib/p5.multiplayer.js"></script>
     <!-- p5 sketch -->
